fixing a number of spacing issues, general redesign

--- a/gallery.html
+++ b/gallery.html
@@ -7,35 +7,36 @@
 		<link rel="stylesheet" type="text/css" href="league-gothic-master/webfonts/stylesheet.css">
 	</head>
 	<body>
-		<div id="wrapper">
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html" class="buttonnav">Home</a>
-					</li>
-					<li>
-						<a href="threecolumn.html" class="buttonnav">Travel</a>
-					</li>
-					<li>
-						<a href="gallery.html" class="buttonnav">Gallery</a>
-					</li>
-					<li>
-						<a href="https://www.facebook.com/RevelstokeMTN/" target="new"><span class="icon-social-facebook"></span></a>
-					</li>
-					<li>
-						<a href="https://twitter.com/revelstokemtn" target="new"><span class="icon-social-twitter"></span></a>
-					</li>
-				</ul>
-			</nav>
-			<h1>Gallery</h1>
-			<div class="gallery">
-				<img src="images/IMG_1311.jpg" style="width:400px;">
-				<img src="images/IMG_7443.jpg" style="width:400px;">
-				<img src="images/IMG_7457.jpg" style="width:400px;">
-				<img src="images/IMG_7459.jpg" style="width:400px;">
-				<img src="images/IMG_7485.jpg" style="width:400px;">
-				<img src="images/IMG_7527.jpg" style="width:400px;">
-			</div>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html" class="buttonnav">Home</a>
+				</li>
+				<li>
+					<a href="threecolumn.html" class="buttonnav">Travel</a>
+				</li>
+				<li>
+					<a href="gallery.html" class="buttonnav">Gallery</a>
+				</li>
+				<li>
+					<a href="twoColumn.html" class="buttonnav">More!</a>
+				</li>
+				<li>
+					<a href="https://www.facebook.com/RevelstokeMTN/" target="new"><span class="icon-social-facebook"></span></a>
+				</li>
+				<li>
+					<a href="https://twitter.com/revelstokemtn" target="new"><span class="icon-social-twitter"></span></a>
+				</li>
+			</ul>
+		</nav>
+		<h1>Gallery</h1>
+		<div class="gallery">
+			<img src="images/IMG_1311.jpg" style="width:400px;">
+			<img src="images/IMG_7443.jpg" style="width:400px;">
+			<img src="images/IMG_7457.jpg" style="width:400px;">
+			<img src="images/IMG_7459.jpg" style="width:400px;">
+			<img src="images/IMG_7485.jpg" style="width:400px;">
+			<img src="images/IMG_7527.jpg" style="width:400px;">
 		</div>
 	</body>
 </html>
