major overhaul of navabr, content divs etc to allow resizing of window and content remains visible

--- a/threecolumn.html
+++ b/threecolumn.html
@@ -7,6 +7,15 @@
 		<link rel="stylesheet" type="text/css" href="league-gothic-master/webfonts/stylesheet.css">
 	</head>
 	<body>
+		<div class="bg">
+			<img src="images/backgroundindex.jpg">
+		</div>
+
+		<div class="headlines">
+			<h1>Revelstoke</h1>
+			<h2>The World's most stoked ski area!</h2>
+			<h2>How to get here</h2>
+		</div>
 		<nav>
 			<ul>
 				<li>
@@ -30,25 +39,22 @@
 
 			</ul>
 		</nav>
-		<div class="mainleft">
-			<p>
-				Fusce at tortor sagittis, condimentum nisi a, hendrerit elit. Etiam ut pulvinar diam. Nunc lacinia tellus id consequat commodo. Donec venenatis leo at augue convallis rutrum eu sed nunc. Morbi et mollis augue. Phasellus tortor metus, lacinia eget erat ac, facilisis dictum massa. Nullam leo eros, pharetra at dignissim eget, semper vitae lacus. Donec bibendum, ligula in tempus imperdiet, nisl leo mollis sapien, ac malesuada enim tellus vel urna.
-
-				Sed quam ex, congue et ornare vel, convallis et nisl. Vestibulum feugiat leo eros, id sagittis enim blandit finibus. Suspendisse dui odio, sollicitudin non risus vitae, volutpat dictum nisl. Aliquam ullamcorper felis nec risus cursus, sit amet hendrerit diam finibus. Pellentesque non velit sit amet nulla feugiat aliquet. Mauris vel vehicula elit, vel eleifend ligula. Nulla facilisi. Aliquam suscipit accumsan tincidunt. Vestibulum vehicula hendrerit ante, quis ornare justo.
-
-				Ut vel est nunc. Ut convallis tincidunt orci, non facilisis nunc finibus non. Etiam non urna id risus rutrum ultrices. Donec vehicula mi ex, sit amet tempor velit dignissim eu. Mauris sodales vulputate tincidunt. Morbi quis cursus justo, sit amet fringilla erat. Maecenas a sodales lacus. In at tortor ut elit hendrerit pulvinar. Nullam vitae libero nibh. Curabitur ac tincidunt lacus. Fusce iaculis eros elit, quis malesuada diam egestas vel
-			</p>	
-		</div>
-		<div class="maincenter">
-			<h1>Revelstoke</h1>
-			<h2>The World's most stoked ski area!</h2>
-			<h3>How to get here</h3>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d11404889.015100023!2d-128.43027479379822!3d45.74319183468987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x809bd62ecf1fa721%3A0x2a98b230816c9ed1!2sTahoe+City%2C+CA!3m2!1d39.1446803!2d-120.17624939999999!4m5!1s0x53793705fa6adda5%3A0x4f3c647db9d6efca!2sRevelstoke%2C+BC%2C+Canada!3m2!1d50.998115!2d-118.19567199999999!5e0!3m2!1sen!2sus!4v1449290491914" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</div>
-		<div class="mainright">
-			<p>There's pretty much only 2 ways to get here: by car, or by plane.</p>
-			<p>Revelstoke mountain is located next to the town of Revelstoke in British Columbia, Canada.  It is about a 4 hour drive from Calgary or a 6 hour drive from Vancouver, or about 20 hours from Tahoe City, Califonia.</p>
-			<p>You could fly here, but the airport seems small, and looks like it could be an...exciting landing/approach.  Take a look in the gallery to see what we mean!</p>
+		<div class="threeColumnContent">
+			<div class="mainleft">
+				<p>
+					Fusce at tortor sagittis, condimentum nisi a, hendrerit elit. Etiam ut pulvinar diam. Nunc lacinia tellus id consequat commodo. Donec venenatis leo at augue convallis rutrum eu sed nunc. Morbi et mollis augue. Phasellus tortor metus, lacinia eget erat ac, facilisis dictum massa. Nullam leo eros, pharetra at dignissim eget, semper vitae lacus. Donec bibendum, ligula in tempus imperdiet, nisl leo mollis sapien, ac malesuada enim tellus vel urna.
+				</p>	
+			</div>
+			<div class="maincenter">
+				<iframe frameborder="0" scrolling="no" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d11404889.015100023!2d-128.43027479379822!3d45.74319183468987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x809bd62ecf1fa721%3A0x2a98b230816c9ed1!2sTahoe+City%2C+CA!3m2!1d39.1446803!2d-120.17624939999999!4m5!1s0x53793705fa6adda5%3A0x4f3c647db9d6efca!2sRevelstoke%2C+BC%2C+Canada!3m2!1d50.998115!2d-118.19567199999999!5e0!3m2!1sen!2sus!4v1449290491914" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="mainright">
+				<p>There's pretty much only 2 ways to get here: by car, or by plane.</p>
+				<p>Revelstoke mountain is located next to the town of Revelstoke in British Columbia, Canada.  It is about a 4 hour drive from Calgary or a 6 hour drive from Vancouver, or about 20 hours from Tahoe City, Califonia.</p>
+				<p>
+					You could fly here, but the airport seems small, and looks like it could be an...exciting landing/approach.  Take a look in the gallery to see what we mean!
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
