--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="league-gothic-master/webfonts/stylesheet.css">
 	</head>
 	<body>
+		<div class="bg">
+			<img src="images/backgroundindex.jpg">
+		</div>
 		<nav>
 			<ul>
 				<li>
